tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/char_bitwise_and.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print('a' & 'b')

